review-fix: TxDetails floats above footer. TxDetails toggle buttons moved into footer"
* Move "Details" / "Hide" buttons into the form-nav footer section

* TxDetails now appears above the footer area above other input fields without causing the screen height to increase

* Background of the TxDetails darkened so it stands out from surroudings

* Change "Details" arrow to point upwards since TxDetails now shown above

* Change "Hide" arrow to point downward since TxDetails now shown above

* Rename classnames to `_` or `-` more consistently

* Note: To quickly display the 'Details' button so you can click it change TxForm.js as follows:

```
{/* {valid && this.estimatedTxFee(values) ? ( */}
  <TxDetails
    // estimatedTxFee={this.estimatedTxFee(values)}
    estimatedTxFee={new BigNumber('8100000')}
    token={token}
    // values={values}
    values={ { amount: new BigNumber('0.1'), gasPrice: new BigNumber('21000') } }
  />
{/* ) : null} */}

--- a/packages/fether-react/src/assets/sass/components/_form-nav.scss
+++ b/packages/fether-react/src/assets/sass/components/_form-nav.scss
@@ -11,3 +11,17 @@
     justify-content: space-around;
   }
 }
+
+.form-details-wrapper {
+  position: relative;
+}
+
+.form_field { /* extend .form_field class of react-final-form */
+  &.-details-value {
+    position: absolute;
+    background-color: $faint;
+    bottom: 2rem;
+    left: -7.75rem;
+    width: 19rem;
+  }
+}
